--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/aws-lambda": "^8.10.84",
+    "@vendia/serverless-express": "^4.4.0",
+    "aws-lambda": "^1.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "serverless-offline": "^8.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
